clusters/homelab/environments/production/apps/personal-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-blog
  namespace: production
spec:
  selector:
    matchLabels:
      app: personal-blog
  replicas: 1
  template:
    metadata:
      labels:
        app: personal-blog
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: personal-blog
          image: ghcr.io/lewi0231/home-lab-automation-personal-blog:latest # {"$imagepolicy": "production:personal-blog"}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: personal-blog
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: personal-blog
