clusters/homelab/environments/production/apps/personal-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog-ingress-production
  namespace: production
spec:
  rules:
    - host: personal-blog.production.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-blog-production
                port:
                  number: 80
